# dagster-test

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  devbox.json  requirements.txt
.roo/skills/dagster-expert/: SKILL.md  SKILL.md.orig
dagster-poc/: .env.example  README.md  SUMMARY.md  pyproject.toml  workspace.yaml
dagster-poc/data/: raw_payments.csv
dagster-poc/dbt/: .env.example  README.md
dagster-poc/dbt/tests/: test_constants.py  test_translator.py
dagster-poc/downstream/: .env.example  README.md
dagster-poc/downstream/tests/: test_fact_virtual_count.py
dagster-poc/ingestion/: .env.example  README.md  pyproject.toml  test_databricks_connection.py  workspace.yaml
dagster-poc/ingestion/tests/: conftest.py  test_config.py  test_sling_translator.py
dbt-cloud/: .gitignore  README.md  dbt_cloud_orchestration_diagram.md  dbt_cloud_orchestration_review.md  pyproject.toml
dbt-cloud-orchestration/: .env.example  .gitignore  FRESHNESS_FIX.md  FRESHNESS_MANUAL_GUIDE.md  FRESHNESS_ROOT_CAUSE.md  FRESHNESS_SENSOR_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  SOLUTION_SUMMARY.md  SUMMARY.md  fact_virtual_count.json  pyproject.toml  run_freshness_sensor.py  test_freshness_sensors.py  test_simple_sensor.py  trigger_sensor.py  workspace.yaml
dbt-cloud-orchestration/data/: raw_customers.csv  raw_fact_virtual.csv  raw_orders.csv
dbt-cloud-orchestration/dbt/: README.md  pyproject.toml  workspace.yaml
dbt-cloud-orchestration/dbt/dbt_orchestration/: definitions.py
dbt-cloud-orchestration/dbt/dbt_orchestration/defs/: assets.py  resources.py
dbt-cloud-orchestration/dbt/src/dbt_orchestration/: definitions.py
dbt-cloud-orchestration/dbt/src/dbt_orchestration/components/dbt_cloud/: __init__.py  component.py  component.yaml  defs.yaml
dbt-cloud-orchestration/dbt/src/dbt_orchestration/defs/: __init__.py  assets.py
dbt-cloud-orchestration/dbt/src/defs/: __init__.py  definitions.py
dbt-cloud-orchestration/dbt/tests/: __init__.py
dbt-cloud-orchestration/downstream/: README.md  pyproject.toml  workspace.yaml
dbt-cloud-orchestration/downstream/downstream/: definitions.py
dbt-cloud-orchestration/downstream/downstream/defs/: fact_virtual_count.py
dbt-cloud-orchestration/downstream/src/defs/: __init__.py  definitions.py  fact_virtual_count.py
dbt-cloud-orchestration/downstream/src/downstream/: definitions.py
dbt-cloud-orchestration/downstream/src/downstream/defs/: fact_virtual_count.py
dbt-cloud-orchestration/ingestion/: README.md  dagster.yaml  debug_defs.py  pyproject.toml  workspace.yaml
dbt-cloud-orchestration/ingestion/ingestion/: __init__.py  definitions.py
dbt-cloud-orchestration/ingestion/ingestion/components/ingestion_dlt/: __init__.py  component.py  dlt_pipeline.py  loads.py
dbt-cloud-orchestration/ingestion/ingestion/components/ingestion_sling/: component.py  component.yaml  replication_csv.yaml  replication_db.yaml
dbt-cloud-orchestration/ingestion/ingestion/defs/: dlt_pipeline.py  loads.py  resources.py  utils.py
dbt-cloud-orchestration/ingestion/src/defs/: definitions.py  dlt_pipeline.py  loads.py  resources.py  utils.py
dbt-cloud-orchestration/ingestion/src/ingestion/components/ingestion_dlt/: component.yaml  dlt_pipeline.py
dbt-cloud-orchestration/ingestion/src/ingestion/components/ingestion_sling/: component.yaml
dbt-cloud-orchestration/ingestion/tests/: test_dlt_pipeline.py
dbt-cloud-orchestration/src/dbt_cloud_orchestration/: definitions.py  definitions_backup.py
dbt-cloud-orchestration/src/dbt_cloud_orchestration/defs/: dbt_cloud_orchestration.py  resources.py
dbt-cloud-orchestration/src/dbt_cloud_orchestration/defs/dbt/: __init__.py  assets.py  definitions.py  resources.py
dbt-cloud-orchestration/src/dbt_cloud_orchestration/defs/dlt_databricks_ingest/: dlt_pipeline.py
dbt-cloud-orchestration/src/dbt_cloud_orchestration/defs/downstream/: __init__.py  definitions.py  fact_virtual_count.py
dbt-cloud-orchestration/src/dbt_cloud_orchestration/defs/ingestion/: __init__.py  definitions.py  definitions.py.backup  dlt_pipeline.py  dlt_pipeline_backup.py  enhanced_freshness_sensor.py  freshness_sensor.py  freshness_utils.py  loads.py  resources.py  simple_freshness_sensor.py
dbt-cloud-orchestration/src/dbt_cloud_orchestration/defs/shared/: asset_keys.py
dbt-cloud-orchestration/tests/: test_freshness_sensor.py
dbt-cloud/src/dbt_cloud/: definitions.py
dbt-cloud/src/dbt_cloud/defs/: dbt_cloud_orchestration.py
dbx-project/: .duckdbrc  ENVIRONMENT_SETUP.md  README.md  inspect_groups.py  inspect_pipes.py  pyproject.toml  verify_freshness_v2.py  verify_keys.py
dbx-project/data/: raw_customers.csv  raw_orders.csv
dbx-project/dbt/jdbt/: dbt_project.yml  profiles.yml  profiles_local.yml  profiles_prod.yml
dbx-project/dbt/jdbt/models/: customers.sql  schema.yml
dbx-project/doc/: README_TEST.md
dbx-project/src/dbx_project/: custom_pipes.py  definitions.py
dbx-project/src/dbx_project/defs/: customers_freshness.py  databricks_jobs.py  schedules.py
dbx-project/src/dbx_project/defs/ingest_files/: defs.yaml  partitioned_ingestion.py  replication.yaml  replication_local.yaml  replication_prod.yaml  replication_prod_from_csv.yaml
dbx-project/src/dbx_project/defs/jaffle_shop_assets/: defs.yaml  defs_local.yaml  defs_prod.yaml
dbx-project/tests/: test_partitioned_ingestion.py
dlt-project/: README.md  pyproject.toml
dlt-project/dbt/jdbt/: README.md  profiles.yml
dlt-project/src/dlt_project/: definitions.py
my-project/: compose.m.yml  compose.q.yml  compose.yml  pyproject.toml
my-project/dbt/jdbt/: .user.yml
plans/: dbx-project-analysis.md  ingestion-analysis.md  partitioned-ingestion-conversion.md  partitioned-ingestion-testing.md
sling-project/: README.md  pyproject.toml
sling-project/data/: raw_customers.csv
sling-project/dbt/jdbt/: profiles.yml
sling-project/dbt/jdbt/models/: customers.sql  orders.sql
sling-project/dbt/jdbt/models/stg/: stg_orders.sql
sling-project/src/sling_project/defs/ingestion/: defs.yaml  replication.yaml
sling-project/src/sling_project/defs/jdbt/: defs.yaml
(+45 files in other folders)
