[project]
name = "dbt_cloud_orchestration"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster>=1.12.8",
    "dagster-dbt>=0.28.8",
    "dagster-dlt>=0.28.8",
    "dlt[databricks]>=0.4.0",
    "pandas>=2.3.3",
    "pyarrow>=14.0.0",
    "requests",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dbt_cloud_orchestration"


