[project]
name = "dbt-cloud-orchestration"
version = "0.1.0"
description = "Dagster + dbt Cloud orchestration monorepo"
requires-python = ">=3.10,<3.15"

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "ingestion",
    "dbt",
    "downstream",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
