[project]
name = "dbt_cloud"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster-dbt>=0.28.2",
    "dagster[dagit]>=1.12.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dbt_cloud"
registry_modules = [
    "dbt_cloud.components.*",
]


