[project]
name = "sling_project"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.1",
    "dagster-dbt>=0.28.1",
    "dagster-sling>=0.28.1",
    "dbt-duckdb>=1.10.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "sling_project"
registry_modules = [
    "sling_project.components.*",
]


