[project]
name = "dbt"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster>=1.12.8",
    "dagster-dbt>=0.28.8",
    "requests",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dbt"
